--- a/NR/NRApp/templates/base.html
+++ b/NR/NRApp/templates/base.html
@@ -7,27 +7,27 @@
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .navbar {
-            height: 100px; /* Increase the height of the navbar */
-            background-color: #d4edda; /* Light green background color */
+            height: 100px;
+            background-color: #d4edda;
         }
         .navbar-brand {
             display: flex;
-            align-items: center; /* Center the brand content vertically */
+            align-items: center;
         }
         .navbar-brand img {
-            max-height: 60px; /* Adjust the height of the logo */
+            max-height: 60px;
             margin-right: 10px;
         }
         .navbar-brand h2 {
             display: inline-block;
-            font-size: 1.75rem; /* Adjust the font size as needed */
+            font-size: 1.75rem;
             margin: 0;
         }
         .navbar-nav .nav-link {
             font-size: 1rem;
             padding-left: 20px;
             padding-right: 20px;
-            color: black; /* Set the text color to black */
+            color: black;
         }
         .navbar-nav .nav-item.active .nav-link {
             font-weight: bold;
@@ -37,6 +37,18 @@
         }
         .navbar-toggler {
             margin-left: auto;
+        }
+        @media (max-width: 575.98px) {
+            .navbar-brand h2 {
+                font-size: 1.25rem;
+            }
+            .navbar-brand img {
+                max-height: 40px;
+            }
+            .navbar-nav .nav-link {
+                padding-left: 10px;
+                padding-right: 10px;
+            }
         }
     </style>
 </head>
@@ -75,7 +87,6 @@
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('login') }}" style="color: black;">Login</a>
-                      
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('register') }}" style="color: black;">Register</a>
