--- a/NR/NRApp/templates/register_admin.html
+++ b/NR/NRApp/templates/register_admin.html
@@ -12,6 +12,16 @@
             background-color: #d4edda;
             color: #155724;
         }
+
+        .btn-custom-green {
+            background-color: #28a745;
+            color: white;
+        }
+
+        .btn-custom-green:hover {
+            background-color: #218838;
+            color: white;
+        }
     </style>
 </head>
 
@@ -25,7 +35,6 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header header-light-green text-center">
-                       
                         <h2>Register Admin</h2>
                     </div>
                     <div class="card-body">
@@ -47,14 +56,12 @@
                         <form method="POST" action="{{ url_for('register_admin') }}"> 
                             <input type="hidden" name="csrf_token" value="{{ csrf_token }}">
                             <div class="form-group">
-                                <label for="business_name">Name</label>
-                                <input type="text" class="form-control" id="admin_name" name="admin_name"
-                                    required>
+                                <label for="admin_name">Name</label>
+                                <input type="text" class="form-control" id="admin_name" name="admin_name" required>
                             </div>
                             <div class="form-group">
-                                <label for="business_address">Address</label>
-                                <input type="text" class="form-control" id="admin_address" name="admin_address"
-                                    required>
+                                <label for="admin_address">Address</label>
+                                <input type="text" class="form-control" id="admin_address" name="admin_address" required>
                             </div>
                             <div class="form-group">
                                 <label for="phone_number">Phone Number</label>
@@ -66,19 +73,16 @@
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" name="password"
-                                    placeholder="Password" required>
+                                <input type="password" class="form-control" id="password" name="password" placeholder="Password" required>
                             </div>
                             <div class="form-group">
                                 <label for="confirm_password">Confirm Password</label>
-                                <input type="password" class="form-control" id="confirm_password"
-                                    name="confirm_password" placeholder="Confirm Password" required>
+                                <input type="password" class="form-control" id="confirm_password" name="confirm_password" placeholder="Confirm Password" required>
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-custom-green">Register</button>
                             </div>
                         </form>
-                       
                         <div class="text-center mt-3">
                             <p>Already have an account? <a href="{{ url_for('login') }}">Login here</a></p>
                         </div>
