--- a/NR/NRApp/templates/approval.html
+++ b/NR/NRApp/templates/approval.html
@@ -10,7 +10,7 @@
             </div>
             <div class="card-body">
                 <div class="alert alert-success text-center" role="alert">
-                    Congratulations! You are successfully eligible.
+                    Congratulations! Your Request is Successful and will be Reviewed.
                 </div>
                 <h4 class="text-center">Business Details</h4>
                 <div class="row">
