--- a/NR/NRApp/templates/prediction.html
+++ b/NR/NRApp/templates/prediction.html
@@ -24,60 +24,19 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>
-                                    <input type="number" step="0.01" name="PROPOSED_FACILITY_AMOUNT" required class="form-control" value="{{ PROPOSED_FACILITY_AMOUNT }}">
-                                </td>
-                                <td>
-                                    <select name="BUSINESS_PROJECT" required class="form-control">
-                                        <option value="">Select Business Type</option>
-                                        <option value="EXISTING" {% if BUSINESS_PROJECT == 'EXISTING' %}selected{% endif %}>Existing</option>
-                                        <option value="NEW" {% if BUSINESS_PROJECT == 'NEW' %}selected{% endif %}>Fresh</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select name="VALUE_CHAIN_CATEGORY" required class="form-control">
-                                        <option value="">Select Category</option>
-                                        <option value="PRE-UPSTREAM" {% if VALUE_CHAIN_CATEGORY == 'PRE-UPSTREAM' %}selected{% endif %}>Pre-Upstream</option>
-                                        <option value="UPSTREAM" {% if VALUE_CHAIN_CATEGORY == 'UPSTREAM' %}selected{% endif %}>Upstream</option>
-                                        <option value="MIDSTREAM" {% if VALUE_CHAIN_CATEGORY == 'MIDSTREAM' %}selected{% endif %}>Midstream</option>
-                                        <option value="DOWNSTREAM" {% if VALUE_CHAIN_CATEGORY == 'DOWNSTREAM' %}selected{% endif %}>Downstream</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select name="BORROWING_RELATIONSHIP" required class="form-control">
-                                        <option value="">Select</option>
-                                        <option value="YES" {% if BORROWING_RELATIONSHIP == 'YES' %}selected{% endif %}>Yes</option>
-                                        <option value="NO" {% if BORROWING_RELATIONSHIP == 'NO' %}selected{% endif %}>No</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select name="FRESH_LOAN_REQUEST" required class="form-control">
-                                        <option value="">Select</option>
-                                        <option value="YES" {% if FRESH_LOAN_REQUEST == 'YES' %}selected{% endif %}>Yes</option>
-                                        <option value="NO" {% if FRESH_LOAN_REQUEST == 'NO' %}selected{% endif %}>No</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select name="REQUEST_SUBMITTED_TO_BANK" required class="form-control">
-                                        <option value="">Select</option>
-                                        <option value="YES" {% if REQUEST_SUBMITTED_TO_BANK == 'YES' %}selected{% endif %}>Yes</option>
-                                        <option value="NO" {% if REQUEST_SUBMITTED_TO_BANK == 'NO' %}selected{% endif %}>No</option>
-                                    </select>
-                                </td>
-                                <td>
-                                    <select name="FEASIBILITY_STUDY_AVAILABLE" required class="form-control">
-                                        <option value="">Select</option>
-                                        <option value="YES" {% if FEASIBILITY_STUDY_AVAILABLE == 'YES' %}selected{% endif %}>Yes</option>
-                                        <option value="NO" {% if FEASIBILITY_STUDY_AVAILABLE == 'NO' %}selected{% endif %}>No</option>
-                                        <option value="NIL" {% if FEASIBILITY_STUDY_AVAILABLE == 'NIL' %}selected{% endif %}>Not Available</option>
-                                    </select>
-                                </td>
+                                <td>{{ form.PROPOSED_FACILITY_AMOUNT(class="form-control") }}</td>
+                                <td>{{ form.BUSINESS_PROJECT(class="form-control") }}</td>
+                                <td>{{ form.VALUE_CHAIN_CATEGORY(class="form-control") }}</td>
+                                <td>{{ form.BORROWING_RELATIONSHIP(class="form-control") }}</td>
+                                <td>{{ form.FRESH_LOAN_REQUEST(class="form-control") }}</td>
+                                <td>{{ form.REQUEST_SUBMITTED_TO_BANK(class="form-control") }}</td>
+                                <td>{{ form.FEASIBILITY_STUDY_AVAILABLE(class="form-control") }}</td>
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <div class="text-center">
-                    <input type="submit" value="Predict" class="btn btn-success">
+                    {{ form.submit(class="btn btn-success") }}
                     <input type="reset" value="Reset" class="btn btn-secondary">
                 </div>
             </form>
