--- a/NR/NRApp/templates/register.html
+++ b/NR/NRApp/templates/register.html
@@ -53,70 +53,31 @@
                             {{ form.hidden_tag() }}
                             <div class="form-group">
                                 <label for="business_name">Business Name</label>
-                                <input type="text" class="form-control" id="business_name" name="business_name" required>
+                                {{ form.business_name(class="form-control", id="business_name") }}
                             </div>
                             <div class="form-group">
                                 <label for="business_address">Business Address</label>
-                                <input type="text" class="form-control" id="business_address" name="business_address" required>
+                                {{ form.business_address(class="form-control", id="business_address") }}
                             </div>
                             <div class="form-group">
                                 <label for="phone_number">Phone Number</label>
-                                <input type="text" class="form-control" id="phone_number" name="phone_number" required>
+                                {{ form.phone_number(class="form-control", id="phone_number") }}
                             </div>
                             <div class="form-group">
                                 <label for="email">Email</label>
-                                <input type="email" class="form-control" id="email" name="email" required>
+                                {{ form.email(class="form-control", id="email") }}
                             </div>
                             <div class="form-group">
                                 <label for="state">State of Business</label>
-                                <select class="form-control" id="state" name="state" required>
-                                    <option value="">Select State</option>
-                                    <option value="Abia">Abia</option>
-                                    <option value="Adamawa">Adamawa</option>
-                                    <option value="Akwa Ibom">Akwa Ibom</option>
-                                    <option value="Anambra">Anambra</option>
-                                    <option value="Bauchi">Bauchi</option>
-                                    <option value="Bayelsa">Bayelsa</option>
-                                    <option value="Benue">Benue</option>
-                                    <option value="Borno">Borno</option>
-                                    <option value="Cross River">Cross River</option>
-                                    <option value="Delta">Delta</option>
-                                    <option value="Ebonyi">Ebonyi</option>
-                                    <option value="Edo">Edo</option>
-                                    <option value="Ekiti">Ekiti</option>
-                                    <option value="Enugu">Enugu</option>
-                                    <option value="Gombe">Gombe</option>
-                                    <option value="Imo">Imo</option>
-                                    <option value="Jigawa">Jigawa</option>
-                                    <option value="Kaduna">Kaduna</option>
-                                    <option value="Kano">Kano</option>
-                                    <option value="Katsina">Katsina</option>
-                                    <option value="Kebbi">Kebbi</option>
-                                    <option value="Kogi">Kogi</option>
-                                    <option value="Kwara">Kwara</option>
-                                    <option value="Lagos">Lagos</option>
-                                    <option value="Nasarawa">Nasarawa</option>
-                                    <option value="Niger">Niger</option>
-                                    <option value="Ogun">Ogun</option>
-                                    <option value="Ondo">Ondo</option>
-                                    <option value="Osun">Osun</option>
-                                    <option value="Oyo">Oyo</option>
-                                    <option value="Plateau">Plateau</option>
-                                    <option value="Rivers">Rivers</option>
-                                    <option value="Sokoto">Sokoto</option>
-                                    <option value="Taraba">Taraba</option>
-                                    <option value="Yobe">Yobe</option>
-                                    <option value="Zamfara">Zamfara</option>
-                                    <option value="FCT">FCT</option>
-                                </select>
+                                {{ form.state(class="form-control", id="state") }}
                             </div>
                             <div class="form-group">
                                 <label for="password">Password</label>
-                                <input type="password" class="form-control" id="password" name="password" required>
+                                {{ form.password(class="form-control", id="password") }}
                             </div>
                             <div class="form-group">
                                 <label for="confirm_password">Confirm Password</label>
-                                <input type="password" class="form-control" id="confirm_password" name="confirm_password" required>
+                                {{ form.confirm_password(class="form-control", id="confirm_password") }}
                             </div>
                             <div class="text-center">
                                 <button type="submit" class="btn btn-primary">Register</button>
