--- a/NR/NRApp/templates/prediction.html
+++ b/NR/NRApp/templates/prediction.html
@@ -8,7 +8,7 @@
         </div>
         <div class="card-body">
             <form action="{{ url_for('predict') }}" method="post">
-                {{ form.hidden_tag() }}
+                {{ form.csrf_token }}
                 <div class="table-responsive">
                     <table class="table table-striped">
                         <thead>
