--- a/NR/NRApp/templates/search.html
+++ b/NR/NRApp/templates/search.html
@@ -69,8 +69,8 @@
                         <td>{{ user.business_address }}</td>
                         <td>{{ user.state }}</td>
                         <td>
-                            <a href="{{ url_for('edit_user', user_id=(link unavailable)) }}" class="btn btn-warning btn-sm">Edit</a>
-                            <a href="{{ url_for('delete_user', user_id=(link unavailable)) }}" class="btn btn-danger btn-sm">Delete</a>
+                           <a href="{{ url_for('edit_user', user_id=user.id) }}" class="btn btn-warning btn-sm">Edit</a>
+                        <a href="{{ url_for('delete_user', user_id=user.id) }}" class="btn btn-danger btn-sm">Delete</a>
                         </td>
                     </tr>
                 </tbody>
