--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}NRS Prediction{% endblock %}</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <style>
         .navbar {
             height: 100px;
@@ -86,10 +87,10 @@
             {% else %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('login') }}" style="color: black;">Login</a>
+                        <a class="nav-link" href="{{ url_for('landing.login') }}" style="color: black;">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{{ url_for('register') }}" style="color: black;">Register</a>
+                        <a class="nav-link" href="{{ url_for('landing.register') }}" style="color: black;">Register</a>
                     </li>
                 </ul>
             {% endif %}
